# thermprint

./: .gitignore  LICENSE  README.md  main.py  requirements.txt  run-server.sh
client/: index.html  package.json  tsconfig.app.tsbuildinfo  (+1 more)
server/: Dockerfile  generate_calendar.py  prototype_split_preview.py  pyproject.toml  requirements.txt
server/app/: bootstrap.py  config.py  dependencies.py  error_handlers.py  main.py
server/app/configs/: device.json  image.json  qrcode.json
server/app/routes/: __init__.py  _forms.py  device.py  devices.py  forms.py  jobs.py  preview.py  print.py  qrcode.py  settings.py  status.py  ws.py
server/app/routes/device/: __init__.py  device.py
server/app/routes/jobs/: jobs.py
server/app/routes/printer/: __init__.py  calendar.py  preview.py  print.py  qrcode.py
server/app/schemas/: __init__.py  device.py  devices.py  jobs.py  preview.py  print_settings.py
server/app/services/: broadcast.py  device_store.py  job_manager.py  preview_service.py  printer_service.py  qrcode_service.py  settings_store.py
server/app/services/jobs/: __init__.py  broadcast.py  database.py  job_manager.py
server/app/services/printer/: __init__.py  calendar_service.py  image_service.py  preview_service.py  printer_service.py  qrcode_service.py
server/app/services/stores/: device_store.py  settings_store.py
server/tests/: conftest.py  test_calendar.py  test_database.py  test_device.py  test_image_split.py  test_jobs.py  test_jobs_delete.py  test_jobs_pagination.py  test_preview.py  test_print.py  test_qrcode.py  test_settings.py  test_status.py
(+81 files in other folders)
