[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "bleak>=3.0.0",
    "fastapi>=0.115.0",
    "pillow>=12.0.0",
    "pydantic-settings>=2.0.0",
    "python-lzo>=1.15",
    "python-multipart>=0.0.9",
    "qrcode>=8.2",
    "uvicorn[standard]>=0.30.0",
]
